--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(Learning C)
 set(CMAKE_C_STANDARD 11)
 
 add_subdirectory("${PROJECT_SOURCE_DIR}/SquaresOfSortedArray" "${PROJECT_SOURCE_DIR}/SquaresOfSortedArray/Output")
+add_subdirectory("${PROJECT_SOURCE_DIR}/TwoSums" "${PROJECT_SOURCE_DIR}/TwoSums/Output")
