--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_C_STANDARD 11)
 
 add_subdirectory("${PROJECT_SOURCE_DIR}/SquaresOfSortedArray" "${PROJECT_SOURCE_DIR}/SquaresOfSortedArray/Output")
 add_subdirectory("${PROJECT_SOURCE_DIR}/TwoSums" "${PROJECT_SOURCE_DIR}/TwoSums/Output")
+add_subdirectory("${PROJECT_SOURCE_DIR}/AddTwoNumbers" "${PROJECT_SOURCE_DIR}/AddTwoNumbers/Output")
